updating api with HATEOAS
