# src/routes/apiRouter.js
@@ -7,9 +7,17 @@ const apiRouter = Router()
 let ProductModel = require('../db/models/productModel.js')
 let apiController = require('../controllers/apiController.js')(ProductModel)
 
-let {	getMany, getOne, 	createOne,	updateOne, deleteOne} = apiController
+let {	getRouteExamples, getMany, getOne, 	createOne,	updateOne, deleteOne} = apiController
 
 apiRouter
+ .get('/', (req, res) => {
+ 	 res  .json({
+ 	 	 '/products': "https://mallory-furniture-admin.now.sh/api/v1/products",
+ 		 '/products?category=[catName]': "https://mallory-furniture-admin.now.sh/api/v1/products?category=seating",
+ 		 '/products/[productId]' : "https://mallory-furniture-admin.now.sh/api/v1/products/SkwebWxWB0b"
+ 	 })
+ })
+
  .get('/products', getMany)
  .get('/products/:_id', getOne)
  // .post('/', createOne)
